navbar height on mobile fixed

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ body {
     "language language link link link link link link icon icon";
   grid-template-rows: 80px 80px;
   grid-template-columns: repeat(10, 1fr);
+  width: 100vw;
   height: 160px;
   top: 0;
   box-shadow: 0 0 10px #ccc;
@@ -1215,7 +1216,7 @@ html.no-scroll-y {
       "link    "
       "icon    ";
     grid-template-columns: 1fr;
-    height: 100vh;
+    height: 100dvh;
     width: 100vw;
     box-shadow: 0 0 10px #ccc;
     transform: translateY(-100%);
